--- a/views/Introduction.ejs
+++ b/views/Introduction.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MainPage</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet"><!-- 폰트 링크-->
-    <link rel="stylesheet" href="./main.css"> 
+    <link rel="stylesheet" href="../main.css"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
 </head>
@@ -13,36 +13,6 @@
 
 
 <body>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="text/javascript">
-     $(document).ready( function() {
-
-    $("#page").load("./inMain/video.ejs");  
-
-    });
-    
-    function team1() {
-        $("#page").load("./inMain/Teammates.ejs");
-    }
-    function wd() {
-        $("#page").load("./inMain/Introduction.ejs");
-    }
-    function qna() {
-        $("#page").load("./inMain/QnA.ejs");
-    }
-    
-    function writing(){
-        $("#page").load("./inMain/post/write.ejs");
-    }
-
-    
-
-
-
-
-    </script>
-    
     <!--전체를 감싸는 태그-->
     <div  id="page-wrapper">
 
@@ -51,7 +21,7 @@
             <table  width="180px" height="0px" text-align="center" align="right"> <!--멤버로그인 박스 설정 align="right"로 오른쪽으로 배치 border속성 사용 x ->선안보임-->
                 <tr>
                    <td height="150px" text-align="center">
-                     <b>안녕하세요! <%=user.nick %> 님 😊</b> <br>
+                     <!-- <b>안녕하세요! %=user.nick% 님 😊</b> <br> -->
                     <a id="logout" href="/auth/logout">로그아웃</a>
                    </td> 
                   </tr>
@@ -93,7 +63,11 @@
             <article>
                 <div class="article-header" id ="page" name="page">
                     
-                    <!-- 비디오 음소거 자동재생 무한반복-->
+                    <button id = '1' onclick='a(this.id)'>wdb</button>
+                    <h2>인력양성</h2>
+                    <p id='11'>바뀌기전</p>
+                    <h2>교욱과정</h2>
+                    <p id='12'>바뀌기전</p>
 
         
                 </div>
@@ -127,5 +101,25 @@
             </div>
          </footer>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+        function a(id) {
+            axios({
+                method : 'post',
+                url : 'http://localhost:3001/main/introduction',
+                data : {
+                    "id" : id
+                }
+            }).then( (res) => {
+                var id2 =id +1;
+                console.log(document.getElementById(id2).value);
+                console.log(res.data);
+                document.getElementById(id2).innerHTML = res.data;
+            })
+            .catch((err)=> {
+                console.error(err);
+            })
+        }
+     </script>
 </body>
 </html>
